2011-11-02  Viatcheslav Ostapenko  <ostapenko.viatcheslav@nokia.com>

        [Qt] [WK] Debug build broken
        https://bugs.webkit.org/show_bug.cgi?id=71417

        Add WKNumber.h for WKBooleanGetTypeID
        Replace WKGetTypeId with WKGetTypeID
        Add initialization for didDetectXSSForFrame member in WKBundlePageLoaderClient
        instance.

        Reviewed by Noam Rosenthal.

        * WebProcess/qt/QtBuiltinBundle.cpp:
        (WebKit::QtBuiltinBundle::handleSetNavigatorQtObjectEnabled):
        * WebProcess/qt/QtBuiltinBundlePage.cpp:
        (WebKit::QtBuiltinBundlePage::QtBuiltinBundlePage):

2011-11-02  Mark Hahnenberg  <mhahnenberg@apple.com>

        De-virtualize JSObject::getOwnPropertyNames
        https://bugs.webkit.org/show_bug.cgi?id=71307

        Reviewed by Darin Adler.

        Added getOwnPropertyNames to the MethodTable, changed all the virtual 
        implementations of getOwnPropertyNames to static ones, and replaced 
        all call sites with corresponding lookups in the MethodTable.

        * WebProcess/Plugins/Netscape/JSNPObject.cpp:
        (WebKit::JSNPObject::getOwnPropertyNames):
        * WebProcess/Plugins/Netscape/JSNPObject.h:

2011-11-02  Anders Carlsson  <andersca@apple.com>

        Don't call NPP_SetWindow if the plug-in size or clip rect hasn't changed if the plug-in isn't using window relative coordinates
        https://bugs.webkit.org/show_bug.cgi?id=71418

        Reviewed by Adam Roben.

        This avoids calling into the plug-in when only the plug-in position relative to the window changes.
    
        * WebProcess/Plugins/Netscape/NetscapePlugin.cpp:
        (WebKit::NetscapePlugin::geometryDidChange):

2011-11-02  Jon Lee  <jonlee@apple.com>

        Fix syntax error.

        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::performDragControllerAction):

2011-11-02  Jon Lee  <jonlee@apple.com>

        Fix build error from r99108.

        * WebProcess/WebPage/WebPage.cpp: